# rs_practise

./: .gitignore  dump.rdb
all-in/rs_template/: cliff.toml
clis/rs_cli/: a.txt
clis/rs_cli_clap/: Cargo.toml
clis/rs_cli_clap/src/: main.rs
custom_macro/: Cargo.toml
custom_macro/src/: lib.rs
rs_cli/: Cargo.toml
rs_cli/src/: main.rs
rs_ffi/crates/hello/: Cargo.toml
rs_ffi/crates/hello/third_c/: add.h  hello.c
rs_ffi/crates/run_c/: Cargo.toml  build.rs
rs_ffi/crates/run_c/src/: main.rs
rs_ios/crates/ars/: Cargo.toml
rs_ios/crates/ars/.cargo/: config.toml
rs_ios/crates/ars/src/: lib.rs
rs_ios/crates/hos/: Cargo.toml
rs_ios/crates/irs/: Cargo.toml
rs_ios/crates/irs/src/: lib.rs
rs_libuv/node_uv/: build.rs  package.json  pnpm-lock.yaml
rs_libuv/node_uv/npm/android-arm-eabi/: README.md  package.json
rs_libuv/node_uv/npm/android-arm64/: README.md  package.json
rs_libuv/node_uv/npm/darwin-arm64/: README.md  package.json
rs_libuv/node_uv/npm/darwin-x64/: README.md  package.json
rs_libuv/node_uv/npm/freebsd-x64/: README.md  package.json
rs_libuv/node_uv/npm/linux-arm-gnueabihf/: README.md  (+1 more)
rs_libuv/node_uv/src/: lib.rs
rs_libuv/node_worker/: index.js  package.json  worker.js
rs_meta/: Cargo.toml
rs_meta/examples/: user_example.rs
rs_meta/src/: user.rs
rs_napi/: README.md
rs_napi/crates/api/: Cargo.toml  build.rs
rs_napi/crates/apisecond/: Cargo.toml
rs_napi/crates/backend/: Cargo.toml
rs_practises/: Cargo.toml
rs_practises/src/: closure.rs  main.rs  mutex_arc.rs  simple_code.rs
struct_debug_macro/: Cargo.toml
(+21 files in other folders)
